# ai-financial-auditor

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_PLAN.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  implementer.md  test-runner.md
.claude/hooks/: git-safety.sh  graphify-update.sh  py-lint.sh  run-tests.sh  test-runner.sh  ui-lint.sh
backend/: config.py  database.py  db_migrations.py  default_dashboard_config.py  main.py  requirements.txt
backend/agents/: __init__.py  chat.py  nodes.py  tools.py  widget_studio.py  widget_studio_prompts.py
backend/chains/: audit.py  embeddings.py
backend/middleware/: auth.py
backend/models/: __init__.py  audit_report.py  base.py  category_master.py  category_rule.py  chat_session.py  dashboard.py  description_category.py  document.py  transaction.py  user.py  widget.py  widget_studio.py
backend/parsers/: __init__.py  csv_parser.py  pdf_parser.py  pdf_strategies.py
backend/prompts/: audit_prompt.py  category_prompt.py
backend/routers/: admin.py  analytics.py  audit.py  auth.py  categories.py  chat.py  dashboard.py  documents.py  transactions.py  widget_studio.py
backend/services/: auth.py  auto_categorize.py  category_flow_analytics.py  category_master_service.py  category_rules_apply.py  dashboard_overview.py  dashboard_service.py  drive.py  graphify_service.py  observability.py  preview_rate_limit.py  safe_errors.py  short_description.py  widget_intent.py  widget_metric_raw_sql.py  widget_placeholders.py  widget_query.py  widget_sql_aliases.py  widget_studio_dashboard.py  widget_studio_rate_limit.py
backend/tests/: conftest.py  test_agents_nodes.py  test_agents_tools.py  test_analytics_router.py  test_auto_categorize.py  test_categories_router.py  test_category_flow_analytics.py  test_category_rules_apply.py  test_chat_router.py  test_csv_parser.py  test_dashboard_overview.py  test_dashboard_router.py  test_dashboard_service.py  test_db_migrations.py  test_documents_router.py  test_pdf_parser.py  test_placeholder_resolution.py  test_preview_rate_limit.py  test_safe_errors.py  test_short_description.py  test_unmapped_endpoints.py  test_upload_integration.py  test_widget_intent.py  test_widget_metric_raw_sql.py  test_widget_query.py  test_widget_sql_aliases.py  test_widget_studio_agentscope_pipeline.py  test_widget_studio_broken.py  test_widget_studio_chat.py  test_widget_studio_domain_guard.py  test_widget_studio_intent_context.py  test_widget_studio_json_parse.py  test_widget_studio_pipeline.py  test_widget_studio_reply.py  test_widget_studio_sql_placeholders.py
backend/widget_studio/: __init__.py  agent_logging.py  agentscope_config.py  broken_widget.py  config.py  context_loader.py  domain_guard.py  orchestrator.py  (+5 more)
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
migrations/: 001_extensions.sql  002_schema.sql  003_rls.sql  004_file_hash.sql  005_transaction_remarks.sql  006_debit_credit_split.sql  007_categories.sql  008_rls_categories.sql  009_unique_description_categories.sql  010_widgets.sql  011_category_rules.sql  012_update_education_categories.sql  013_chat_session_kind.sql  014_chat_session_draft_state.sql  015_widget_studio_tables.sql  016_widget_definitions_broken.sql
(+100 files in other folders)
