[project]
name = "ai-financial-auditor"
version = "0.1.0"
description = "AI Personal Finance Auditor — FastAPI + LangChain + React"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "sqlparse>=0.5.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "langsmith>=0.1.63",
    "langfuse>=2.30.0",
    "pdfplumber>=0.11.0",
    "pandas>=2.2.2",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "graphifyy>=0.7.5",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.128.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in defaults (FastAPI pattern)
    "TC001",  # move first-party imports into TYPE_CHECKING — breaks SQLAlchemy/LangGraph runtime resolution
    "TC002",  # move third-party imports into TYPE_CHECKING — breaks SQLAlchemy/LangGraph runtime resolution
    "TC003",  # move stdlib imports into TYPE_CHECKING — breaks SQLAlchemy/LangGraph runtime resolution
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright — static type checking
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["backend"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "graphify-out",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUntypedFunctionDecorator = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
